# anytoolai-platform

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  Makefile  PAPERCUTS.md  README.md  conftest.py  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-task.md  architecture-change.md  bug.md  feature.md  product-config.md
.github/workflows/: agent-smoke.yml  architecture.yml  backend.yml  config-validation.yml  docs.yml  frontend.yml
apps/platform-api/: pyproject.toml
apps/platform-api/src/anytoolai_platform_api/: bootstrap.py  dependencies.py  errors.py  main.py  schemas.py  settings.py
apps/platform-api/src/anytoolai_platform_api/middleware/: error_handler.py  request_context.py
apps/platform-api/src/anytoolai_platform_api/openapi/: generate.py
apps/platform-api/src/anytoolai_platform_api/routers/: handoffs.py  identity_quota.py  runtime_config.py  scenario_runtime.py
apps/platform-api/tests/: test_access_logging.py  test_bootstrap.py  test_handoffs_api.py  test_health.py  test_identity_quota_api.py  test_quota_concurrency_postgresql.py  test_quota_concurrency_stress.py  test_runtime_config.py  test_scenario_runtime.py  test_scenario_runtime_api.py  test_startup_config_validation.py
apps/platform-worker/: pyproject.toml
apps/platform-worker/src/anytoolai_platform_worker/: __init__.py  composition.py  main.py  queues.py  settings.py  worker.py
apps/platform-worker/src/anytoolai_platform_worker/handlers/: run_action.py  run_workflow.py
apps/platform-worker/tests/: test_settings.py  test_worker_boot.py
apps/web-mirror/: package.json  tsconfig.json
configs/kernel/: default_tenant.yaml  litellm_router.yaml  platform_events.yaml  provider_policies.yaml  regions.yaml  schemas.yaml
docs/: core-beliefs.md  glossary.md  index.md  quality-score.md  tech-debt-tracker.md
docs/adr/: 0001-monorepo.md  0002-config-first-registry.md  0003-short-agents-md.md  0004-generic-structured-llm-executor.md  0004-llm-runtime-pydanticai-litellm-sdk.md  0005-separate-product-chrome-extensions.md  0006-event-log-as-core.md  0007-llm-runtime-pydanticai-litellm-sdk.md
docs/agent/: codex-operating-model.md  diagnostics.md  failure-recovery.md  harness-engineering-map.md  (+5 more)
extensions/: AGENTS.md
tests/: test_collect_context.py  test_docs_generation.py  test_quick_check.py  test_runner.py  test_validate_docs.py
(+295 files in other folders)
