[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anytoolai-monorepo"
version = "0.1.0"
description = "AnytoolAI agent-first monorepo skeleton"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic==2.13.4",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "pyyaml>=6.0",
  "litellm>=1.89.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "httpx>=0.27",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "httpx>=0.27",
]

[tool.setuptools]
py-modules = []

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps", "packages", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages/backend/platform-core/tests", "packages/backend/platform-actions/tests", "packages/backend/platform-sdk/tests"]
addopts = "-q"
